tests/reference/run-allocatable_component_unnamed_unallocated_01-9346375.stderr
runtime error: Array 'x(1)%arr' is not allocated. Allocate it manually or use the '--realloc-lhs-arrays' option to allocate it automatically.
  --> tests/../integration_tests/allocatable_component_unnamed_unallocated_01.f90:10:5
   |
10 |     x(1)%arr = [1, 2, 3]
   |     ^^^^^^^^ 'x(1)%arr' not allocated here
